fix: body overflow hidden

--- a/src/layouts/main/main.scss
+++ b/src/layouts/main/main.scss
@@ -1,3 +1,7 @@
+body {
+  overflow-y: hidden;
+}
+
 .page {
   margin: 0 auto;
   font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
